--- a/index.html
+++ b/index.html
@@ -37,34 +37,36 @@
     <section class="min-h-screen flex flex-col justify-center px-6 pt-20 max-w-7xl mx-auto">
         <div class="grid lg:grid-cols-2 gap-12 items-center">
             <div>
+                <div class="inline-flex items-center gap-2 px-3 py-1 rounded-full bg-sky-500/10 border border-sky-500/20 text-sky-400 text-[10px] font-bold mb-6 mono">
+                    <span class="w-2 h-2 bg-sky-500 rounded-full animate-pulse"></span>
+                    SECURITY_OPERATIONS_MODE: ACTIVE
+                </div>
                 <h1 class="text-5xl md:text-7xl font-bold text-white mb-6 tracking-tight">
-                    Securing the <span class="text-sky-500">Digital Perimeter.</span>
+                    KRISH SANDIP <span class="text-sky-500 underline decoration-2 underline-offset-8">SHAH</span>
                 </h1>
-                <p class="text-lg leading-relaxed mb-8 border-l-2 border-sky-500 pl-6 bg-sky-500/5 py-4">
-                    [cite: 69] Dedicated IT specialist with a solid technical foundation and a drive to provide top-notch customer service. [cite: 70] Looking for a challenging role as an IT helpdesk specialist where I can use my technical knowledge and troubleshooting skills to resolve end-user issues.
+                <p class="text-lg leading-relaxed mb-8 border-l-2 border-sky-500 pl-6 bg-sky-500/5 py-4 text-slate-300">
+                    <strong class="text-white">Security Researcher & Computer Engineer</strong> [cite: 64, 67] specialized in <strong class="text-sky-400">Network Security and Automated Reconnaissance</strong>[cite: 88, 90]. Currently finalizing a Graduate Certificate in Cyber Security at Loyalist College[cite: 57, 60]. Proven track record in <strong class="text-white">environment monitoring</strong> and resolving high-tier technical incidents at the <strong class="text-white">L2/L3 escalation level</strong>.
                 </p>
                 <div class="flex gap-6">
                     <div class="text-sm">
-                        <span class="block text-sky-500 mono text-xs uppercase mb-1">Location</span>
-                        <span class="text-white">Ahmedabad, Gujarat [cite: 55]</span>
+                        <span class="block text-sky-500 mono text-xs uppercase mb-1">Primary Email</span>
+                        <span class="text-white">Krishshah13579@gmail.com</span> [cite: 48]
                     </div>
                     <div class="text-sm">
-                        <span class="block text-sky-500 mono text-xs uppercase mb-1">Availability</span>
-                        <span class="text-white">Full-Time</span>
+                        <span class="block text-sky-500 mono text-xs uppercase mb-1">Security Focus</span>
+                        <span class="text-white">Penetration Testing / Network Defense</span>
                     </div>
                 </div>
             </div>
             
-            <div class="grid grid-cols-2 gap-4">
-                <div class="glass p-6 rounded-2xl glow">
-                    <i data-lucide="shield" class="text-sky-400 mb-4"></i>
-                    <h3 class="text-white font-bold mb-2">Cyber Security</h3>
-                    <p class="text-xs">Ontario College Graduate Certificate [cite: 57, 58]</p>
+            <div class="grid grid-cols-1 gap-4">
+                <div class="glass p-6 rounded-2xl glow border-l-4 border-l-sky-500">
+                    <h3 class="text-white font-bold mb-1">Cyber Security Graduate Certificate</h3> [cite: 57]
+                    <p class="text-xs text-sky-400 mono uppercase">Loyalist College // 2024 Expected</p> [cite: 57, 60]
                 </div>
-                <div class="glass p-6 rounded-2xl">
-                    <i data-lucide="cpu" class="text-sky-400 mb-4"></i>
-                    <h3 class="text-white font-bold mb-2">Engineering</h3>
-                    <p class="text-xs">Bachelors in Computer Engineering [cite: 63, 64]</p>
+                <div class="glass p-6 rounded-2xl border-l-4 border-l-slate-700">
+                    <h3 class="text-white font-bold mb-1">Bachelors in Computer Engineering</h3> [cite: 63]
+                    <p class="text-xs text-slate-500 mono uppercase">Gujarat Technological University // 2022</p> [cite: 65, 62]
                 </div>
             </div>
         </div>
