--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KRISH SHAH | Security Specialist</title>
+    <title>KRISH SHAH | Cyber Security Professional</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/lucide@latest"></script>
     <style>
@@ -11,8 +11,8 @@
         body { background: #020617; color: #94a3b8; font-family: 'Inter', sans-serif; scroll-behavior: smooth; }
         .mono { font-family: 'Space Mono', monospace; }
         .glass { background: rgba(15, 23, 42, 0.8); backdrop-filter: blur(12px); border: 1px solid rgba(56, 189, 248, 0.1); }
-        .stat-card { border-left: 2px solid #0ea5e9; background: linear-gradient(90deg, rgba(14, 165, 233, 0.05) 0%, transparent 100%); }
-        .glow { box-shadow: 0 0 20px rgba(14, 165, 233, 0.15); }
+        .cyber-card { border-left: 3px solid #0ea5e9; transition: all 0.3s ease; }
+        .cyber-card:hover { background: rgba(14, 165, 233, 0.05); transform: translateX(5px); }
     </style>
 </head>
 <body class="selection:bg-sky-500 selection:text-white">
@@ -21,189 +21,91 @@
         <div class="max-w-7xl mx-auto flex justify-between items-center">
             <div class="flex items-center gap-2">
                 <div class="w-2 h-2 bg-sky-500 rounded-full animate-pulse"></div>
-                <span class="mono text-white font-bold tracking-tighter">SEC_OPS // KRISH_SHAH</span>
+                <span class="mono text-white font-bold tracking-tighter uppercase">Krish_Shah_v2.0</span>
             </div>
             <div class="hidden md:flex gap-8 text-[10px] mono uppercase tracking-widest">
-                <a href="#projects" class="hover:text-sky-400">Modules</a>
-                <a href="#experience" class="hover:text-sky-400">Experience</a>
-                <a href="#console" class="hover:text-sky-400">Terminal</a>
+                <a href="#about" class="hover:text-sky-400">Identity</a>
+                <a href="#projects" class="hover:text-sky-400">Security_Labs</a>
+                <a href="#experience" class="hover:text-sky-400">Log_History</a>
             </div>
-            <a href="mailto:Krishshah13579@gmail.com" class="text-sky-400 border border-sky-400/30 px-4 py-1 rounded hover:bg-sky-400 hover:text-white transition mono text-xs">
-                CONNECT
+            <a href="mailto:Krishshah13579@gmail.com" class="bg-sky-500 text-slate-950 px-4 py-1.5 rounded font-black mono text-[10px] hover:bg-white transition">
+                SECURE_CONTACT
             </a>
         </div>
     </nav>
 
-    <section class="min-h-screen flex flex-col justify-center px-6 pt-20 max-w-7xl mx-auto">
-        <div class="grid lg:grid-cols-2 gap-12 items-center">
-            <div>
-                <div class="inline-flex items-center gap-2 px-3 py-1 rounded-full bg-sky-500/10 border border-sky-500/20 text-sky-400 text-[10px] font-bold mb-6 mono">
-                    <span class="w-2 h-2 bg-sky-500 rounded-full animate-pulse"></span>
-                    SECURITY_OPERATIONS_MODE: ACTIVE
-                </div>
-                <h1 class="text-5xl md:text-7xl font-bold text-white mb-6 tracking-tight">
-                    KRISH SANDIP <span class="text-sky-500 underline decoration-2 underline-offset-8">SHAH</span>
-                </h1>
-                <p class="text-lg leading-relaxed mb-8 border-l-2 border-sky-500 pl-6 bg-sky-500/5 py-4 text-slate-300">
-                    <strong class="text-white">Security Researcher & Computer Engineer</strong> [cite: 64, 67] specialized in <strong class="text-sky-400">Network Security and Automated Reconnaissance</strong>[cite: 88, 90]. Currently finalizing a Graduate Certificate in Cyber Security at Loyalist College[cite: 57, 60]. Proven track record in <strong class="text-white">environment monitoring</strong> and resolving high-tier technical incidents at the <strong class="text-white">L2/L3 escalation level</strong>.
-                </p>
-                <div class="flex gap-6">
-                    <div class="text-sm">
-                        <span class="block text-sky-500 mono text-xs uppercase mb-1">Primary Email</span>
-                        <span class="text-white">Krishshah13579@gmail.com</span> [cite: 48]
-                    </div>
-                    <div class="text-sm">
-                        <span class="block text-sky-500 mono text-xs uppercase mb-1">Security Focus</span>
-                        <span class="text-white">Penetration Testing / Network Defense</span>
-                    </div>
-                </div>
-            </div>
-            
-            <div class="grid grid-cols-1 gap-4">
-                <div class="glass p-6 rounded-2xl glow border-l-4 border-l-sky-500">
-                    <h3 class="text-white font-bold mb-1">Cyber Security Graduate Certificate</h3> [cite: 57]
-                    <p class="text-xs text-sky-400 mono uppercase">Loyalist College // 2024 Expected</p> [cite: 57, 60]
-                </div>
-                <div class="glass p-6 rounded-2xl border-l-4 border-l-slate-700">
-                    <h3 class="text-white font-bold mb-1">Bachelors in Computer Engineering</h3> [cite: 63]
-                    <p class="text-xs text-slate-500 mono uppercase">Gujarat Technological University // 2022</p> [cite: 65, 62]
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section id="projects" class="max-w-7xl mx-auto px-6 py-24 border-t border-slate-900">
-        <h2 class="mono text-sky-500 text-sm mb-12 uppercase tracking-[0.4em]">Development_Modules</h2>
-        <div class="grid md:grid-cols-3 gap-8">
-            <div class="glass p-8 rounded-3xl hover:border-sky-500 transition-all group">
-                <div class="flex justify-between mb-6">
-                    <i data-lucide="search" class="text-sky-400 group-hover:scale-110 transition"></i>
-                    <span class="text-[10px] mono text-slate-500">PY_CORE</span>
-                </div>
-                <h3 class="text-xl font-bold text-white mb-4">Packet Sniffing Tool</h3>
-                <p class="text-sm text-slate-400 leading-relaxed mb-6">
-                    [cite: 89] Developed in Python providing options for raw, summary, target, and host exploration of network interfaces.
-                </p>
-                <div class="flex gap-2">
-                    <span class="px-2 py-1 bg-sky-500/10 text-sky-400 text-[10px] mono rounded">Networking</span>
-                    <span class="px-2 py-1 bg-sky-500/10 text-sky-400 text-[10px] mono rounded">Python</span>
-                </div>
-            </div>
-
-            <div class="glass p-8 rounded-3xl hover:border-sky-500 transition-all group">
-                <div class="flex justify-between mb-6">
-                    <i data-lucide="binary" class="text-sky-400 group-hover:scale-110 transition"></i>
-                    <span class="text-[10px] mono text-slate-500">VULN_SCAN</span>
-                </div>
-                <h3 class="text-xl font-bold text-white mb-4">The Inspection Tool</h3>
-                <p class="text-sm text-slate-400 leading-relaxed mb-6">
-                    [cite: 91] Automated reconnaissance tool performing port scanning, WHOIS lookups, and subdomain discovery.
-                </p>
-                <div class="flex gap-2">
-                    <span class="px-2 py-1 bg-sky-500/10 text-sky-400 text-[10px] mono rounded">Recon</span>
-                    <span class="px-2 py-1 bg-sky-500/10 text-sky-400 text-[10px] mono rounded">Automation</span>
-                </div>
-            </div>
-
-            <div class="glass p-8 rounded-3xl hover:border-sky-500 transition-all group">
-                <div class="flex justify-between mb-6">
-                    <i data-lucide="keyboard" class="text-sky-400 group-hover:scale-110 transition"></i>
-                    <span class="text-[10px] mono text-slate-500">SYSTEM_LOG</span>
-                </div>
-                <h3 class="text-xl font-bold text-white mb-4">Python Keylogger</h3>
-                <p class="text-sm text-slate-400 leading-relaxed mb-6">
-                    [cite: 86, 87] Security research project focused on keystroke logging and secure data transmission via Python.
-                </p>
-                <div class="flex gap-2">
-                    <span class="px-2 py-1 bg-sky-500/10 text-sky-400 text-[10px] mono rounded">Python</span>
-                    <span class="px-2 py-1 bg-sky-500/10 text-sky-400 text-[10px] mono rounded">CyberSec</span>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section id="experience" class="max-w-7xl mx-auto px-6 py-24 bg-slate-900/20">
+    <section id="about" class="min-h-screen flex flex-col justify-center px-6 pt-20 max-w-7xl mx-auto">
         <div class="grid lg:grid-cols-12 gap-12">
-            <div class="lg:col-span-4">
-                <h2 class="text-4xl font-bold text-white mb-6">Operational History</h2>
-                <p class="text-sm text-slate-500 mb-8">
-                    [cite: 74] Hands-on experience overseeing national IT support operations and  handling production incidents reactively and proactively.
+            <div class="lg:col-span-8">
+                <h1 class="text-6xl md:text-8xl font-black text-white mb-8 tracking-tighter">
+                    KRISH <span class="text-sky-500">SHAH.</span>
+                </h1>
+                <p class="text-xl leading-relaxed text-slate-300 mb-8 max-w-3xl">
+                    <span class="text-sky-400 font-bold uppercase mono text-sm block mb-2">Professional Summary</span>
+                    Security Researcher and Computer Engineer with a technical focus on Network Security and Automated Reconnaissance. 
+                    Accomplished graduate of the Cyber Security program at Loyalist College, expert in building Python-based tools 
+                    for packet sniffing and OSINT discovery. Proven track record in high-tier L2/L3 incident escalation.
                 </p>
-                <div class="space-y-4">
-                    <div class="stat-card p-4">
-                        <span class="block text-2xl font-bold text-white">L2/L3</span>
-                        <span class="text-xs uppercase mono">Support Level </span>
+                <div class="flex flex-wrap gap-4">
+                    <div class="px-4 py-2 bg-slate-900 border border-slate-800 rounded-md mono text-xs">
+                        <span class="text-sky-500">EMAIL:</span> Krishshah13579@gmail.com
+                    </div>
+                    <div class="px-4 py-2 bg-slate-900 border border-slate-800 rounded-md mono text-xs">
+                        <span class="text-sky-500">PHONE:</span> 8128756632
                     </div>
                 </div>
             </div>
-            
-            <div class="lg:col-span-8 space-y-12">
-                <div class="relative pl-8 border-l border-sky-900">
-                    <div class="absolute -left-1.5 top-0 w-3 h-3 bg-sky-500 rounded-full"></div>
-                    <div class="flex justify-between items-start mb-2">
-                        <h3 class="text-xl font-bold text-white">IT Helpdesk Specialist</h3>
-                        <span class="text-sky-500 mono text-xs uppercase">2022 - 2023 [cite: 72]</span>
-                    </div>
-                    <p class="text-sky-400 text-sm mb-4">Mac Consultants | Ahmedabad [cite: 73]</p>
-                    <ul class="text-sm space-y-3 text-slate-400">
-                        <li>[cite: 74] Worked with vendors and contractors to guarantee effective support services.</li>
-                        <li> Resolved complex issues at the second and third level of support via escalation channels.</li>
-                        <li>[cite: 77] Collaborated with MDMs to guarantee smooth delivery of IT services.</li>
-                    </ul>
+            <div class="lg:col-span-4 space-y-4">
+                <div class="glass p-6 rounded-xl border-t-2 border-sky-500">
+                    <h4 class="text-white font-bold">Cyber Security Graduate</h4>
+                    <p class="text-xs text-slate-500">Loyalist College, Toronto | 2024</p>
+                </div>
+                <div class="glass p-6 rounded-xl border-t-2 border-slate-700">
+                    <h4 class="text-white font-bold">B.E. Computer Engineering</h4>
+                    <p class="text-xs text-slate-500">Gujarat Technological University | 2022</p>
                 </div>
             </div>
         </div>
     </section>
 
-    <section id="console" class="max-w-7xl mx-auto px-6 py-24">
-        <div class="glass rounded-2xl overflow-hidden shadow-2xl">
-            <div class="bg-slate-900/50 px-6 py-3 flex justify-between items-center border-b border-sky-900/20">
-                <div class="flex gap-2">
-                    <div class="w-2 h-2 rounded-full bg-red-500/50"></div>
-                    <div class="w-2 h-2 rounded-full bg-yellow-500/50"></div>
-                    <div class="w-2 h-2 rounded-full bg-green-500/50"></div>
-                </div>
-                <span class="mono text-[10px] text-slate-500">SEC_SHELL_V1.0</span>
+    <section id="projects" class="max-w-7xl mx-auto px-6 py-24">
+        <h2 class="mono text-sky-500 text-xs mb-12 uppercase tracking-[0.5em]">Security_Research_Tools</h2>
+        <div class="grid md:grid-cols-2 gap-6">
+            <div class="glass p-8 rounded-2xl cyber-card">
+                <h3 class="text-xl font-bold text-white mb-2">The Inspection Tool</h3>
+                <p class="text-sm text-slate-400 mb-4">Developed a Python tool for target URL reconnaissance using port scanning, whois lookup, and subdomain discovery.</p>
+                <span class="mono text-[10px] bg-sky-500/10 text-sky-400 px-2 py-1 rounded">Automation</span>
             </div>
-            <div id="output" class="p-8 h-80 overflow-y-auto mono text-sm text-sky-400 space-y-2">
-                <div class="text-slate-500">System Ready. Type 'capabilities' or 'contact' to begin.</div>
-            </div>
-            <div class="p-6 bg-black/40 flex gap-4 items-center border-t border-sky-900/20">
-                <span class="mono text-sky-500 font-bold">$</span>
-                <input type="text" id="terminalInput" class="bg-transparent border-none outline-none text-white mono w-full" autofocus autocomplete="off">
+            <div class="glass p-8 rounded-2xl cyber-card">
+                <h3 class="text-xl font-bold text-white mb-2">Packet Sniffing Engine</h3>
+                <p class="text-sm text-slate-400 mb-4">Python-based network analyzer with Raw, Summary, Target, and Host exploration modes.</p>
+                <span class="mono text-[10px] bg-sky-500/10 text-sky-400 px-2 py-1 rounded">Network Security</span>
             </div>
         </div>
     </section>
 
-    <footer class="py-12 text-center text-[10px] mono text-slate-700 tracking-[0.5em] border-t border-slate-900">
-        &copy; 2026 KRISH SANDIP SHAH // 01001011 01010011 01010011
+    <section id="experience" class="max-w-7xl mx-auto px-6 py-24 border-t border-slate-900">
+        <h2 class="mono text-sky-500 text-xs mb-12 uppercase tracking-[0.5em]">Operational_History</h2>
+        <div class="space-y-12">
+            <div>
+                <div class="flex justify-between items-baseline mb-2">
+                    <h3 class="text-2xl font-bold text-white">IT Helpdesk (L2/L3 Support)</h3>
+                    <span class="mono text-xs text-slate-500">2022 — 2023</span>
+                </div>
+                <p class="text-sky-400 mono text-xs mb-4">Mac Consultants | Ahmedabad</p>
+                <p class="text-sm text-slate-400 max-w-3xl leading-relaxed">
+                    Directed national IT support operations and managed escalated L2/L3 technical security incidents. 
+                    Conducted daily environment monitoring and proactively handled production-related outages 
+                    while managing MDM-based IT service delivery.
+                </p>
+            </div>
+        </div>
+    </section>
+
+    <footer class="py-12 text-center border-t border-slate-900 mono text-[10px] text-slate-700 uppercase tracking-widest">
+        &copy; 2026 Krish Sandip Shah // System_Status: Secured
     </footer>
 
-    <script>
-        lucide.createIcons();
-        const input = document.getElementById('terminalInput');
-        const output = document.getElementById('output');
-        const db = {
-            'capabilities': '[cite: 79] Skills: Hardware/Software Troubleshooting, Helpdesk Ticketing, Operating Systems, Networking, Problem-solving.',
-            'contact': 'Email: Krishshah13579@gmail.com | Phone: 8128756632 [cite: 48, 53]',
-            'education': '[cite: 57, 58] Cyber Security Certificate - Loyalist College | [cite: 63, 64] B.E. Computer Engineering - GTU.',
-            'whoami': 'Krish Sandip Shah: IT Specialist & Computer Engineer. [cite: 67, 69]',
-            'help': 'Commands: capabilities, contact, education, whoami, clear'
-        };
-
-        input.addEventListener('keydown', (e) => {
-            if (e.key === 'Enter') {
-                const cmd = input.value.toLowerCase().trim();
-                if (cmd === 'clear') { output.innerHTML = ''; }
-                else if (db[cmd]) {
-                    output.innerHTML += `<div><span class="text-slate-500">$ ${cmd}</span><br>${db[cmd]}</div>`;
-                } else {
-                    output.innerHTML += `<div><span class="text-slate-500">$ ${cmd}</span><br>Command not found. Type 'help'.</div>`;
-                }
-                input.value = '';
-                output.scrollTop = output.scrollHeight;
-            }
-        });
-    </script>
+    <script>lucide.createIcons();</script>
 </body>
 </html>
