--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         body { background: #020617; color: #94a3b8; font-family: 'Inter', sans-serif; scroll-behavior: smooth; }
         .mono { font-family: 'Space Mono', monospace; }
         .glass { background: rgba(15, 23, 42, 0.8); backdrop-filter: blur(12px); border: 1px solid rgba(56, 189, 248, 0.1); }
-        .live-card { border-left: 3px solid #0ea5e9; transition: all 0.3s ease; }
-        .live-card:hover { border-color: #f59e0b; transform: translateY(-5px); background: rgba(245, 158, 11, 0.03); }
+        .active-card { border-left: 3px solid #10b981; } /* Emerald for active */
+        .archive-card { border-left: 3px solid #0ea5e9; } /* Sky for completed */
         
         .typing-cursor::after {
             content: "_";
@@ -28,15 +28,15 @@
         <div class="max-w-7xl mx-auto flex justify-between items-center">
             <div class="flex items-center gap-2">
                 <span class="w-2 h-2 bg-red-500 rounded-full animate-pulse"></span>
-                <span class="mono text-white font-bold tracking-tighter uppercase text-sm">SEC_MONITOR // KRISH_SHAH</span>
+                <span class="mono text-white font-bold tracking-tighter uppercase text-sm">KRISH_SHAH // SEC_LABS</span>
             </div>
             <a href="mailto:Krishshah13579@gmail.com" class="bg-sky-500 text-slate-950 px-4 py-1.5 rounded font-black mono text-[10px] hover:bg-white transition uppercase">
-                Secure_Contact
+                Establish_Link
             </a>
         </div>
     </nav>
 
-    <section class="min-h-[80vh] flex flex-col justify-center px-6 pt-32 max-w-7xl mx-auto">
+    <section class="min-h-[70vh] flex flex-col justify-center px-6 pt-32 max-w-7xl mx-auto">
         <div class="grid lg:grid-cols-12 gap-12">
             <div class="lg:col-span-8">
                 <h1 class="text-6xl md:text-8xl font-black text-white mb-8 tracking-tighter uppercase">
@@ -50,68 +50,50 @@
             <div class="lg:col-span-4 space-y-4">
                 <h2 class="mono text-sky-500 text-[10px] uppercase tracking-[0.4em] mb-4">Academic_Background</h2>
                 <div class="glass p-6 rounded-2xl border-t-2 border-sky-500">
-                    <h3 class="text-white font-bold text-sm uppercase">Cyber Security (Post-Grad)</h3>
+                    <h3 class="text-white font-bold text-sm uppercase">Cyber Security</h3>
                     <p class="text-xs text-slate-400 mt-1">Loyalist College | Graduated 2024</p>
                 </div>
                 <div class="glass p-6 rounded-2xl border-t-2 border-slate-700">
-                    <h3 class="text-white font-bold text-sm uppercase">Computer Engineering (B.E.)</h3>
+                    <h3 class="text-white font-bold text-sm uppercase">Computer Engineering</h3>
                     <p class="text-xs text-slate-400 mt-1">GTU University | 2022</p>
                 </div>
             </div>
         </div>
     </section>
 
-    <section id="skills" class="max-w-7xl mx-auto px-6 py-24 border-t border-slate-900">
-        <div class="grid lg:grid-cols-2 gap-16">
-            <div>
-                <h2 class="mono text-sky-500 text-[10px] mb-8 uppercase tracking-[0.4em]">Competency_Matrix</h2>
-                <div class="space-y-6">
-                    <div>
-                        <div class="flex justify-between mb-2 text-xs mono uppercase text-white">
-                            <span>Python Security Scripting</span>
-                            <span class="text-sky-400 italic">Advanced</span>
-                        </div>
-                        <div class="h-1 w-full bg-slate-800 rounded-full"><div class="h-full bg-sky-500 rounded-full" style="width: 85%"></div></div>
-                    </div>
-                    <div>
-                        <div class="flex justify-between mb-2 text-xs mono uppercase text-white">
-                            <span>Network Traffic Analysis</span>
-                            <span class="text-sky-400 italic">Intermediate</span>
-                        </div>
-                        <div class="h-1 w-full bg-slate-800 rounded-full"><div class="h-full bg-sky-500 rounded-full" style="width: 75%"></div></div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="glass p-8 rounded-3xl border-l-4 border-amber-500 shadow-lg shadow-amber-500/5">
-                <h3 class="text-white font-bold mono text-sm uppercase mb-6 flex items-center gap-2">
-                    <i data-lucide="award" class="text-amber-500 w-4 h-4"></i> Certification_Tracking
-                </h3>
-                <div class="space-y-6">
-                    <div class="flex gap-4">
-                        <i data-lucide="check-circle" class="text-emerald-500 w-5 h-5 flex-shrink-0"></i>
-                        <div>
-                            <p class="text-sm font-bold text-white">Loyalist Graduate Certificate</p>
-                            <p class="text-[10px] mono text-emerald-500 uppercase">Status: 100% Verified (2024)</p>
-                        </div>
-                    </div>
-                    <div class="flex gap-4">
-                        <i data-lucide="clock" class="text-amber-500 w-5 h-5 flex-shrink-0 animate-pulse"></i>
-                        <div>
-                            <p class="text-sm font-bold text-white">CompTIA Security+</p>
-                            <p class="text-[10px] mono text-amber-500 uppercase italic">Status: Ongoing Research & Exam Prep</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
+    <section class="max-w-7xl mx-auto px-6 py-12 border-t border-slate-900">
+        <div class="flex items-center gap-4 mb-12">
+            <h2 class="mono text-emerald-500 text-xs uppercase tracking-[0.5em]">Ongoing_Operations</h2>
+            <span class="px-2 py-0.5 bg-emerald-500/10 text-emerald-500 text-[8px] rounded border border-emerald-500/20">AUTO_UPDATED</span>
         </div>
+        <div id="ongoing-feed" class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
+            </div>
     </section>
 
-    <section id="active-projects" class="max-w-7xl mx-auto px-6 py-24 border-t border-slate-900">
-        <h2 class="mono text-sky-500 text-xs mb-12 uppercase tracking-[0.5em]">Selected_Research_Labs</h2>
-        <div id="github-feed" class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
-            <div class="glass p-8 rounded-2xl animate-pulse text-center mono text-xs col-span-full text-sky-500">
-                SYNCHRONIZING_MODULES...
+    <section class="max-w-7xl mx-auto px-6 py-12 border-t border-slate-900">
+        <h2 class="mono text-sky-500 text-xs mb-12 uppercase tracking-[0.5em]">Research_Archive</h2>
+        <div id="project-feed" class="grid md:grid-cols-2 lg:grid-cols-3 gap-8 text-sm">
+            </div>
+    </section>
+
+    <section class="max-w-7xl mx-auto px-6 py-24 border-t border-slate-900">
+        <div class="grid lg:grid-cols-2 gap-16">
+            <div>
+                <h2 class="mono text-sky-500 text-[10px] mb-8 uppercase tracking-[0.4em]">Skill_Matrix</h2>
+                <div class="space-y-6">
+                    <div>
+                        <div class="flex justify-between mb-2 text-xs mono uppercase text-white"><span>Python Scripting</span><span>85%</span></div>
+                        <div class="h-1 w-full bg-slate-800 rounded-full"><div class="h-full bg-sky-500" style="width: 85%"></div></div>
+                    </div>
+                    <div>
+                        <div class="flex justify-between mb-2 text-xs mono uppercase text-white"><span>Network Forensics</span><span>75%</span></div>
+                        <div class="h-1 w-full bg-slate-800 rounded-full"><div class="h-full bg-sky-500" style="width: 75%"></div></div>
+                    </div>
+                </div>
+            </div>
+            <div class="glass p-8 rounded-3xl border-l-4 border-amber-500">
+                <h3 class="text-white font-bold mono text-sm uppercase mb-4 tracking-widest">Active Roadmap</h3>
+                <p class="text-sm text-amber-500 mono flex items-center gap-2"><i data-lucide="clock" class="w-4 h-4 animate-pulse"></i> CompTIA Security+ (Prep Phase)</p>
             </div>
         </div>
     </section>
@@ -123,78 +105,69 @@
     <script>
         lucide.createIcons();
 
-        // 1. DUAL-SUMMARY TYPING ANIMATION
+        // 1. TYPING ANIMATION
         const textElement = document.getElementById('summary-text');
         const summaries = [
             "Cyber Security Enthusiast & Computer Engineer. Building Python-based security tools to automate reconnaissance and simplify network defense.",
             "Security Researcher focused on Network Forensics. Currently developing specialized modules for packet analysis, OSINT discovery, and vulnerability assessment."
         ];
-
-        let summaryIndex = 0, charIndex = 0, isDeleting = false, typeSpeed = 50;
-
-        function typeEffect() {
-            const currentSummary = summaries[summaryIndex];
-            if (isDeleting) {
-                textElement.textContent = currentSummary.substring(0, charIndex - 1);
-                charIndex--;
-                typeSpeed = 25;
-            } else {
-                textElement.textContent = currentSummary.substring(0, charIndex + 1);
-                charIndex++;
-                typeSpeed = 60;
-            }
-
-            if (!isDeleting && charIndex === currentSummary.length) {
-                isDeleting = true;
-                typeSpeed = 3500;
-            } else if (isDeleting && charIndex === 0) {
-                isDeleting = false;
-                summaryIndex = (summaryIndex + 1) % summaries.length;
-                typeSpeed = 500;
-            }
-            setTimeout(typeEffect, typeSpeed);
+        let summaryIndex = 0, charIndex = 0, isDeleting = false;
+        function type() {
+            const current = summaries[summaryIndex];
+            textElement.textContent = isDeleting ? current.substring(0, charIndex--) : current.substring(0, charIndex++);
+            let speed = isDeleting ? 30 : 60;
+            if (!isDeleting && charIndex === current.length) { isDeleting = true; speed = 3000; }
+            else if (isDeleting && charIndex === 0) { isDeleting = false; summaryIndex = (summaryIndex + 1) % summaries.length; speed = 500; }
+            setTimeout(type, speed);
         }
 
-        // 2. FILTERED GITHUB FETCH LOGIC
-        async function fetchFilteredRepos() {
-            const container = document.getElementById('github-feed');
-            const whitelist = ['Packet-Sniffing-Tool', 'The-Inspection-Tool', 'Keylogger']; 
+        // 2. ADAPTIVE GITHUB FILTERING
+        async function fetchRepos() {
+            const ongoingContainer = document.getElementById('ongoing-feed');
+            const projectContainer = document.getElementById('project-feed');
+            const whitelist = ['Packet-Sniffing-Tool', 'The-Inspection-Tool', 'Keylogger'];
 
             try {
                 const response = await fetch('https://api.github.com/users/SHAHKRISHS/repos');
                 const repos = await response.json();
-                container.innerHTML = ''; 
+                
+                const now = new Date();
+                const oneMonthAgo = new Date().setMonth(now.getMonth() - 1);
 
-                const selectedProjects = repos.filter(repo => 
-                    whitelist.includes(repo.name) || 
-                    repo.name.toLowerCase().includes('security') ||
-                    repo.name.toLowerCase().includes('sniffer')
-                );
+                repos.forEach(repo => {
+                    const updatedAt = new Date(repo.updated_at);
+                    const isRecent = updatedAt > oneMonthAgo;
+                    const isRelevant = whitelist.includes(repo.name) || repo.name.toLowerCase().includes('security');
 
-                selectedProjects.forEach(repo => {
-                    container.innerHTML += `
-                        <div class="glass p-8 rounded-2xl live-card flex flex-col h-full border border-slate-800">
-                            <span class="text-[10px] mono text-sky-500 font-bold mb-4 uppercase tracking-widest">${repo.language || 'CyberSec'}</span>
-                            <h3 class="text-xl font-bold text-white mb-2 uppercase tracking-tighter">${repo.name.replace(/-/g, ' ')}</h3>
-                            <p class="text-sm text-slate-500 mb-8 flex-grow leading-relaxed">
-                                ${repo.description || 'Automated security research and tool development module.'}
-                            </p>
-                            <a href="${repo.html_url}" target="_blank" class="text-sky-400 hover:text-white transition flex items-center gap-2 mono text-[10px]">
-                                VIEW_LAB_SOURCE <i data-lucide="external-link" class="w-3 h-3"></i>
-                            </a>
+                    if (!isRelevant) return;
+
+                    const cardHTML = `
+                        <div class="glass p-8 rounded-2xl ${isRecent ? 'active-card shadow-lg shadow-emerald-500/5' : 'archive-card'} flex flex-col h-full border border-slate-800 transition-all hover:-translate-y-1">
+                            <div class="flex justify-between items-center mb-4">
+                                <span class="text-[9px] mono ${isRecent ? 'text-emerald-500' : 'text-sky-500'} font-bold uppercase tracking-widest">
+                                    ${isRecent ? '● LIVE_STATUS' : 'ARCHIVED_RESEARCH'}
+                                </span>
+                                <span class="text-[9px] mono text-slate-600 uppercase">MOD: ${repo.language || 'Cyber'}</span>
+                            </div>
+                            <h3 class="text-lg font-bold text-white mb-2 uppercase">${repo.name.replace(/-/g, ' ')}</h3>
+                            <p class="text-xs text-slate-500 mb-8 flex-grow leading-relaxed">${repo.description || 'Active research module.'}</p>
+                            <div class="flex justify-between items-center text-[10px] pt-4 border-t border-slate-900">
+                                <span class="mono text-slate-700">UPDATED: ${updatedAt.toLocaleDateString()}</span>
+                                <a href="${repo.html_url}" target="_blank" class="text-sky-400 hover:text-white"><i data-lucide="external-link" class="w-4 h-4"></i></a>
+                            </div>
                         </div>
                     `;
+
+                    if (isRecent) ongoingContainer.innerHTML += cardHTML;
+                    else projectContainer.innerHTML += cardHTML;
                 });
+
+                if (!ongoingContainer.innerHTML) ongoingContainer.innerHTML = '<p class="text-[10px] mono text-slate-700 italic">No operations active in the last 30 days.</p>';
                 lucide.createIcons();
-            } catch (error) {
-                container.innerHTML = `<div class="text-red-500 mono col-span-full text-center">API_OFFLINE</div>`;
-            }
+            } catch (err) { console.error("API_SYNC_ERROR"); }
         }
 
-        window.onload = () => {
-            typeEffect();
-            fetchFilteredRepos();
-        };
+        window.onload = () => { type(); fetchRepos(); };
     </script>
 </body>
 </html>
