--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         async function fetchRepos() {
             const ongoingContainer = document.getElementById('ongoing-feed');
             const projectContainer = document.getElementById('project-feed');
-            const whitelist = ['Packet-Sniffing-Tool', 'The-Inspection-Tool', 'Keylogger'];
+            const whitelist = ['cyber-security'];
 
             try {
                 const response = await fetch('https://api.github.com/users/SHAHKRISHS/repos');
