Add 'cybersecurity' to the whitelist array

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         async function fetchRepos() {
             const ongoingContainer = document.getElementById('ongoing-feed');
             const projectContainer = document.getElementById('project-feed');
-            const whitelist = ['cyber-security'];
+            const whitelist = ['cyber-security', 'cybersecurity'];
 
             try {
                 const response = await fetch('https://api.github.com/users/SHAHKRISHS/repos');
