--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             const projectFeed = document.getElementById('project-feed');
             
             // CONFIGURE YOUR WHITELIST KEYWORDS/NAMES HERE
-            const whitelist = ['Packet-Sniffing-Tool', 'The-Inspection-Tool', 'Keylogger'];
+            const whitelist = ['cybersecurity', 'cyber-security'];
 
             try {
                 const response = await fetch('https://api.github.com/users/SHAHKRISHS/repos', {
